# subduction

./: Cargo.toml
.github/workflows/: ci.yml
examples/macos_layers/src/: main.rs
examples/macos_lotta_layers/src/: main.rs
examples/macos_wgpu/src/: main.rs
examples/trace_demo/src/: main.rs
examples/wayland_example_common/src/: shm.rs
examples/wayland_layers/src/: main.rs
examples/wayland_lotta_layers/src/: main.rs
examples/wayland_wgpu/: Cargo.toml
examples/wayland_wgpu/src/: main.rs
examples/web_layers/src/: lib.rs
examples/web_lotta_layers/src/: lib.rs
examples/web_video/src/: lib.rs
examples/wgpu_layers/: Cargo.toml
examples/wgpu_layers/src/: main.rs
examples/wgpu_lotta_layers/: Cargo.toml
examples/wgpu_lotta_layers/src/: main.rs
examples/windows_layers/: Cargo.toml
examples/windows_layers/src/: main.rs
examples/windows_lotta_layers/: Cargo.toml
subduction_backend_apple/: Cargo.toml
subduction_backend_apple/src/: calayer.rs  cametal.rs  lib.rs
subduction_backend_wayland/src/: commit.rs  event_loop.rs  lib.rs  output_registry.rs  protocol.rs  tick.rs  time.rs
subduction_backend_web/src/: lib.rs  presenter.rs
subduction_backend_wgpu/: Cargo.toml
subduction_backend_wgpu/src/: lib.rs  pipeline.rs  presenter.rs  shader.rs
subduction_backend_windows/: Cargo.toml
subduction_backend_windows/src/: composition.rs  lib.rs  presenter.rs  surface.rs  tick.rs  timing.rs
subduction_core/: Cargo.toml
subduction_core/src/: backend.rs  dirty.rs  lib.rs  output.rs  scheduler.rs  timing.rs  transform.rs
(+5 files in other folders)
